# Local-AI-Server

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  Rag.py  docker-compose.yml
agents/announcements/: CMakeLists.txt
agents/announcements/src/: main.cpp
agents/blog-outline/: CMakeLists.txt
agents/blog-outline/src/: main.cpp
agents/bulk-asset-organizer/: CMakeLists.txt
agents/bulk-asset-organizer/src/: main.cpp
agents/changelog-summarizer/: CMakeLists.txt
agents/changelog-summarizer/src/: main.cpp
agents/daily-reflection/: CMakeLists.txt
agents/daily-reflection/src/: main.cpp
agents/docs-site-builder/: CMakeLists.txt
agents/docs-site-builder/src/: main.cpp
agents/kb-qa/: CMakeLists.txt
agents/kb-qa/src/: main.cpp
agents/rag/: CMakeLists.txt  Dockerfile
agents/rag/include/: http.hpp  rag.hpp  store.hpp  util.hpp
agents/rag/src/: http.cpp  main.cpp  rag.cpp  store.cpp  util.cpp
agents/seo-onpage/: CMakeLists.txt
agents/seo-onpage/src/: main.cpp
agents/ticket-triage/: CMakeLists.txt
agents/ticket-triage/src/: main.cpp
docs/: ARCHITECTURE.md  QUEUE_PROTOCOL.md
services/dashboard/: Dockerfile
services/dashboard/server/: index.js  package.json
services/dashboard/web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
services/dashboard/web/src/: App.jsx  globals.css  index.css
services/dashboard/web/src/components/ui/: badge.jsx  button.jsx  card.jsx  dialog.jsx  input.jsx  progress.jsx  select.jsx  separator.jsx  switch.jsx  table.jsx  tabs.jsx  tooltip.jsx
services/queue/: CMakeLists.txt  Dockerfile
services/queue/include/: job.hpp  priority_queue.hpp
services/queue/src/: main.cpp  priority_queue.cpp
shared/cpp/agent_sdk/: CMakeLists.txt
shared/cpp/agent_sdk/include/: agent_client.hpp
shared/cpp/agent_sdk/src/: agent_client.cpp
shared/protocol/: task.schema.json
